  <SCRIPT ... whatever ...>...</SCRIPT>

  Previously only JavaScript between <SCRIPT> and </SCRIPT> was
  highlighted. A similar change has been made for <STYLE> tags.

- Improved loading time of plain text files if 'more accurate syntax
  highlighting' is on.

+ User Interface Changes:

- Status bar looks somewhat different now, and shows the word wrap mode
  and line separator status.

- The text color and style used to show the "[n lines]" string can now
  be set independently of the EOL marker color.

- Plugin manager window can be closed by pressing Escape.

- Open buffers are shown with a different icon in the file system
  browser.

- 'I/O Progress Monitor' window is dockable now.

- Added two new sub-menus to the Utilities menu, 'jEdit Home Directory'
  and 'Settings Directory'. These two work in a similar fashion to the
  'Current Directory' menu.

  Also the 'Current Directory' menu (and these two new menus) now also
  lists directories; selecting a directory menu item opens it in the
  file system browser.

- Moved BeanShell evaluation commands from 'Utilities' to 'Macros' menu,
  rearranged 'Edit' menu.

- New splash screen, about box, and tool bar icons. (Kris Kopicki)

- Added ColorWellButton control. Under Mac OS X, changing the background
  color of a JButton doesn't work if the MacOS Adaptive look and feel is
  in use... so I wrote a custom control. It looks better and eliminates
  duplicated code anyway. Plugin developers, please use this instead of
  the widely-copied and pasted JButton trick. (Kris Kopicki)

- Added RolloverButton control. Use this instead of the JToolBar
  "isRollover" client property (which only works in the Metal L&F unless
  you're running Java 2 version 1.4). (Kris Kopicki)

+ OS-specific Changes:

- MacOS plugin version 1.2 adds an option pane with a few settings, and
  some bug fixes and cleanups. (Kris Kopicki)

- When running on MacOS, the roots: filesystem now lists all disks
  mounted under /Volumes. (Kris Kopicki)
