@@ -1,4 +1,5 @@
 <html><body>
-Pressing <b>S+ENTER</b> in the search bar will search 
+
+Pressing <b>S+ENTER</b> in the search bar will search
 backwards for the currently entered text.
 </body></html>
